--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "3.0.38",
     "com.unity.inputsystem": "1.15.0",
     "com.unity.learn.iet-framework": "5.0.2",
+    "com.unity.mobile.android-logcat": "1.4.6",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.timeline": "1.8.9",
@@ -14,7 +15,6 @@
     "com.unity.xr.hands": "1.7.2",
     "com.unity.xr.interaction.toolkit": "3.3.0",
     "com.unity.xr.management": "4.5.3",
-    "com.unity.xr.mock-hmd": "1.5.0-exp.1",
     "com.unity.xr.oculus": "4.5.2",
     "com.unity.xr.openxr": "1.15.1",
     "com.unity.modules.accessibility": "1.0.0",
