Move Basic Setup samples to Samples~ directory
Relocated the 'Basic Setup' sample and associated assets from 'Samples/Basic Setup' to 'Samples~/Basic Setup' to follow Unity package structure conventions. Updated the sample path in package.json accordingly and removed the obsolete Samples.meta file.

--- a/Assets/WitShells/XR-BasicSetup/package.json
+++ b/Assets/WitShells/XR-BasicSetup/package.json
@@ -28,7 +28,7 @@
 		{
 			"displayName": "Basic Setup",
 			"description": "A minimal setup demonstrating controller-driven animation and controller/hand visual toggling.",
-			"path": "Samples/Basic Setup"
+			"path": "Samples~/Basic Setup"
 		}
 	]
 }
