--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.mobile.android-logcat": "1.4.6",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.4",
+    "com.unity.shadergraph": "17.0.4",
     "com.unity.timeline": "1.8.9",
     "com.unity.xr.androidxr-openxr": "1.0.2",
     "com.unity.xr.arfoundation": "6.3.1",
